package controller;

    public class AppointmentController {
        // Køres når brugeren klikker Tilføj Aftale
        public void handleAddAppointment() {

        }

        // Køres når brugeren markerer en aftale som gennemført
        public void handleMarkCompleted() {

        }

        // Køres når brugeren klikker Gem
        public void handleSave() {

        }
    }