package controller;

public class DiaryController {
    public void handleAddNote(){

    };

    public void handleSave(){

    };
}
