package model;

public enum Result {
    POSITIVE,
    NEGATIVE,
    PENDING
}
